--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -8,7 +9,7 @@
 <body>
   <h1>Política de Privacidade</h1>
   <p>Esta extensão para o Google Chrome não coleta, armazena ou compartilha quaisquer dados pessoais dos usuários.</p>
-  <p>O único propósito da extensão é permitir o redimensionamento de caixas de texto (<textarea>) em páginas da web, alterando o estilo das mesmas diretamente no navegador do usuário. Nenhum dado é transmitido para servidores externos ou terceiros.</p>
+  <p>O único propósito da extensão é permitir o redimensionamento de caixas de texto em páginas da web, alterando o estilo das mesmas diretamente no navegador do usuário. Nenhum dado é transmitido para servidores externos ou terceiros.</p>
   <p>Se você tiver alguma dúvida ou preocupação, entre em contato com o desenvolvedor.</p>
   
   <iframe width="110" height="200" src="https://www.myinstants.com/instant/marcio-e-marcelo-cortando-grama-10248/embed/" frameborder="0" scrolling="no"></iframe>
